--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
