--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "watch": "webpack --watch --mode development",
+    "start": "concurrently \"npm run dev\" \"npm run watch\"",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   },
   "homepage": "https://github.com/wilhenc36/Now-Electronics#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
@@ -43,9 +47,16 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
-    "slug": "^4.0.2"
+    "slug": "^4.0.2",
+    "sweetalert2": "^10.12.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
   }
 }
