--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nowelectronics",
+  "name": "eclothes",
   "version": "1.0.0",
-  "description": "Tienda en linea de productos electronicos",
+  "description": "Tienda de ropa en linea",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wilhenc36/Now-Electronics.git"
+    "url": "git+https://github.com/PabloT8/eclothes.git"
   },
   "keywords": [
     "node",
@@ -21,12 +21,12 @@
     "bootstrap",
     "MVC"
   ],
-  "author": "José Escoto, Wilhen Cruz, Jassiel Aldana, Hertdert Ortega, David Torres",
+  "author": "Pablo Tabares, Luis Escobar, Jose Leiva, Kevin Zamora, Ernesto Carcamo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/wilhenc36/Now-Electronics/issues"
+    "url": "https://github.com/PabloT8/eclothes/issues"
   },
-  "homepage": "https://github.com/wilhenc36/Now-Electronics#readme",
+  "homepage": "https://github.com/PabloT8/eclothes#readme",
   "dependencies": {
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
