--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.js",
     "watch": "webpack --watch --mode development",
-    "start": "concurrently \"npm run dev\" \"npm run watch\"",
+    "start": "node ./index.js",
     "build": "webpack"
   },
   "repository": {
